<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>intera_interface</name>
  <version>5.4.0</version>
  <description>
    Python interface classes for control of
    Intera-enable Robots from Rethink Robotics.
  </description>

  <maintainer email="rsdk.support@rethinkrobotics.com">
    Rethink Robotics Inc.
  </maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://sdk.rethinkrobotics.com/intera/</url>
  <url type="repository">
    https://github.com/RethinkRobotics/intera_sdk
  </url>
  <url type="bugtracker">
    https://github.com/RethinkRobotics/intera_sdk/issues
  </url>
  <author>Rethink Robotics Inc.</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>rospy</depend>
  <depend>actionlib</depend>
  <depend>intera_core_msgs</depend>
  <depend>intera_motion_msgs</depend>
  <depend>control_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>rospy_message_converter</depend>
  <depend>xacro</depend>

  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-pkg</buildtool_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
