<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>intera_sdk</name>
  <version>5.4.0</version>
  <description>
    intera_sdk metapackage containing all of the SDK packages
    for Rethink Robotics' robots.
  </description>

  <maintainer email="rsdk.support@rethinkrobotics.com">
    Rethink Robotics Inc.
  </maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://sdk.rethinkrobotics.com/intera/</url>
  <url type="repository">
    https://github.com/RethinkRobotics/intera_sdk
  </url>
  <url type="bugtracker">
    https://github.com/RethinkRobotics/intera_sdk/issues
  </url>
  <author>Rethink Robotics Inc.</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>intera_interface</exec_depend>
  <exec_depend>intera_examples</exec_depend>

  <export>
    <metapackage/>
  </export>

</package>
